--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     color: #fff;
 }
 
-.nav_menu{
+.nav_bar{
     box-shadow: 0 0 10px 3px rgb(0 0 0 / 40%);
     min-height: 52px;
     padding: 0 20px;
@@ -12,4 +12,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
+}
+
+
+.options_menu{
+    display: flex;
+    list-style-type: none;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.options_menu li{
+    display: list-item;
+    margin: 15;
 }
