--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body{
     margin: 5;
 }
 
+#presentation_name{
+    font-size: 250%;
+}
+
 .nav_bar{
     box-shadow: 0 0 10px 3px rgb(0 0 0 / 40%);
     padding: 0 20px;
@@ -24,17 +28,14 @@ body{
     list-style-type: none;
     align-items: center;
     justify-content: space-between;
+    flex-basis: 40%;
+    padding: 20;
+    font-size: 110%;
 }
 
 .options_menu li{
     cursor: pointer;
 }
-
-.options_menu li{
-    display: list-item;
-    margin: 15;
-}
-
 
 .text_visualizer{
     box-shadow: 0 0 10px 3px rgb(0 0 0 / 40%);
@@ -48,16 +49,26 @@ body{
     width: 100%;
 }
 
+.dropdown_li{
+    position: relative;
+    display: list-item;
+    margin: 25;
+}
+
 .collapse_list{
     list-style-type: none;
     align-items: center;
     position: absolute;
     border-top: 3px solid white;
     padding: 0;
-    width: 250px;
+    width: 100;
     box-shadow: 0 0 15px 0 rgb(0 0 0 / 18%);
     display: block;
-    top: 190%;
-    left: 0;
-    font-weight: 500;
+    font-size: 80%;
+    top: 100%;
+    overflow: visible; 
+}
+
+.collapse_list li{
+    padding: 5;
 }
